--- a/index.html
+++ b/index.html
@@ -3,16 +3,49 @@
 	<meta charset="UTF-8">
 	<title>Backbone Project</title>
 	<script src="js/lib/modernizr-2.8.3.js"></script>
+	<style>
+		.clearfix:after {
+		     visibility: hidden;
+		     display: block;
+		     font-size: 0;
+		     content: " ";
+		     clear: both;
+		     height: 0;
+		     }
+		.clearfix { display: inline-block; }
+		/* start commented backslash hack \*/
+		* html .clearfix { height: 1%; }
+		.clearfix { display: block; }
+		/* close commented backslash hack */
+		html, body {
+			font-family: Helvetica, sans-serif;
+		}
+		#main-nav {
+			display: block;
+			clear: both;
+		}
+		.navlist {
+			list-style: none;
+			width: 100%;
+			padding: 0;
+		}
+		.navlist>li {
+			float: left;
+			margin-right: 3rem;
+			cursor: pointer;
+			color: #234F9B;
+		}
+	</style>
 </head>
 <body>
-<div id="newcar"></div>
-<ul id="cars"></ul>
-<script type="text/html" id="newCarTemplate">
-	<input type="text" id="carInput" /> <button class="btn-add">Add</button>
-</script>
-<script type="text/html" id="carTemplate">
-	<%= registration %> <button class="btn-delete">Delete</button>
-</script>
+<nav id="main-nav">
+	<ul class="navlist clearfix">
+		<li data-url="home">Home</li>
+		<li data-url="cars">Cars</li>
+		<li data-url="boats">Boats</li>
+	</ul>
+</nav>
+<ul id="container"></ul>
 <script src="js/lib/jquery-3.1.1.js"></script>
 <script src="js/lib/underscore-1.8.3.js"></script>
 <script src="js/lib/backbone-1.3.3.js"></script>
